VERSION[1.4.27][2017/06/14]
For 3.0 builds:
 * Added preliminary support for the 11 new support gems
    * Note that these gems are still using pre-release data, so some stats may change once the beta patch is available
VERSION[1.4.26][2017/06/12]
 * Added Bramble Cobra to the spectre library
 * Added support for the Chaos degen from Forbidden Taste
For 3.0 builds:
 * Damage multipliers for skill parts (e.g Flameblast stages) should now correctly apply to Damaging Ailments
 * Added damage from buffs (e.g Heralds, Anger) should now correctly apply to Damaging Ailments
 * Fixed the multiplier on Remote Mine
VERSION[1.4.25][2017/06/11]
 * Added options to the Options dialog to show thousands separators in the sidebar or Calcs tab
 * Fixed error that could result from importing a character into a 3.0 build
 * A warning is now shown before importing a character into a 3.0 build
VERSION[1.4.24][2017/06/09]
 * Converting builds between game versions will now automatically update the names of gems that been renamed
For 3.0 builds:
 * Updated the base damage for Zombies, Raging Spirits and Skeleton Warriors
 * The duration penalty from Rapid Decay should now apply correctly
VERSION[1.4.23][2017/06/09]
 * Fixed issue causing some of the item type filters in the unique and rare databases to disable the other filters
For 3.0 builds:
 * Modifiers to Area Damage should now apply to all instances of Area Damage over Time (Righteous Fire, Vortex, etc)
 * Modifiers to Skill Effect Duration will now apply to Puncture's Bleed and Viper Strike's Poison
 * The Decay calculation has been updated to account for the Damage over Time changes
 * Elemental Damage with Attacks now correctly affects Ignite
VERSION[1.4.22][2017/06/09]
 * Fixed bug causing certain skill stats to be ignored; this notably affected Blade Vortex and Wither
For 3.0 builds:
 * Applied the Damage over Time changes
    * The new DoT code hasn't been tested as thoroughly as it needs to be, so it may have mistakes